src/test/ui/consts/const-eval/infinite_loop.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/infinite_loop.rs:7:20
   |
LL |             n = if n % 2 == 0 { n/2 } else { 3*n + 1 };
   |                    ^^^^^^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)

error: failed to evaluate the given constant
  --> $DIR/infinite_loop.rs:4:18
   |
LL |       let _ = [(); {
   |  __________________^
LL | |         let mut n = 113383; // #20 in https://oeis.org/A006884
LL | |         while n != 0 {
LL | |             n = if n % 2 == 0 { n/2 } else { 3*n + 1 };
...  |
LL | |         n
LL | |     }];
   | |_____^

error[E0080]: evaluation of constant value failed
  --> $DIR/infinite_loop.rs:7:20
   |
LL |             n = if n % 2 == 0 { n/2 } else { 3*n + 1 };
   |                    ^^^^^^^^^^ exceeded interpreter step limit (see `#[const_eval_limit]`)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
